# ragbase

./: README.md  pyproject.toml  requirements.txt
ragbase/: config.py  ingestor.py
